<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical"
			>

			<TextView
				android:id="@+id/textView2"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="50dp"
				android:text="@string/send_email"
				android:textAppearance="@style/WeTextAppearance.Large"
				android:textSize="36sp"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp"
				android:layout_marginTop="20dp"
				android:text="@string/from"
				/>

			<EditText
				android:id="@+id/from"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:layout_margin="10dp"
				android:layout_marginTop="40dp"
				android:hint="@string/from_hint"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp"
				android:text="@string/to"
				/>

			<EditText
				android:id="@+id/to"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:layout_margin="10dp"
				android:layout_marginTop="40dp"
				android:hint="@string/to_hint"
				/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginStart="8dp"
				android:text="@string/subject"
				/>

			<EditText
				android:id="@+id/subject"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:layout_margin="10dp"
				android:layout_marginTop="40dp"
				android:hint="@string/subject_hint"
				/>

			<Button
				android:id="@+id/signInButton"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:layout_margin="10dp"
				android:layout_marginBottom="20dp"
				android:text="@string/submit"
				android:textColor="@android:color/white"
				android:textSize="16sp"
				/>

		</LinearLayout>

	</ScrollView>

</layout>
